kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hubii-app
  labels:
    name: hubii-app
    project: hubii-challenge
