kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubii-ingress
  namespace: hubii-app
  labels:
    app: hubii-app
    project: hubii-challenge
spec:
  rules:
    - host: hubii.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubii-service
                port:
                  number: 80
